about line spacing fixed

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -466,7 +466,7 @@
   }
   
   .about .content ul li {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     display: flex;
     align-items: center;
   }
@@ -487,7 +487,7 @@
   font-size: 28px;
   color: var(--heading-color);
   text-align: center;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
 }
 
 .section-divider {
